--- a/static/css/artikler.css
+++ b/static/css/artikler.css
@@ -12,24 +12,24 @@
 #body div.innh div.meta {
 	float: right;
 
-	border-top: 1px solid #41b2da;
-	border-bottom: 1px solid #41b2da;
-	border-left: 1px solid #41b2da;
+	border-top: 1px solid #2d2d2d;
+	border-bottom: 1px solid #2d2d2d;
+	border-left: 1px solid #2d2d2d;
 	border-bottom-left-radius: 5px;
 	border-top-left-radius: 5px;
 	-moz-border-bottom-left-radius: 5px;
 	-moz-border-top-left-radius: 5px;
 
-	background-color: #41b2da;
+	background-color: #2d2d2d;
 
 	text-align: right;
-	padding: 0 1% 0 1%;
+	padding: 0.5% 1% 0.5% 1%;
 	color: #fff;
-	font-size: 1.0em;
+	font-size: 0.9em;
 }
 
 #body div.innh div.innhWrapper {
-	margin: 0 20% 0 0;
+	margin: 0 71px 0 0;
 	clear: both;
 }
 
