--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Tienne|Patrick+Hand|Stardos+Stencil|Redressed|La+Belle+Aurore|Limelight|Muli|Wire+One|Jura|Damion|VT323|Bangers|Buda:300|UnifrakturMaguntia|Bentham|IM+Fell+DW+Pica+SC|Lobster|Tenor+Sans&v2);
+@import url(http://fonts.googleapis.com/css?family=Tienne|Patrick+Hand|Stardos+Stencil|Redressed|La+Belle+Aurore|Limelight|Muli|Wire+One|Jura|Damion|VT323|Bangers|Buda:300|UnifrakturMaguntia|Bentham|IM+Fell+DW+Pica+SC|Lobster|Tenor+Sans);
 
 .centeredContainer {
 	width: 950px;
@@ -17,18 +17,21 @@ body {
 
 #head {
 	width: 100%;
-	height: 140px;
+	height: 90px;
 	border: 0;
 	padding: 0;
 	margin: 0;
-	background-color: #323c3e;
-	background-image: url('../img/background_new.jpg');
-	background-repeat: repeat;
+	background-color: #fff;
+	background-image: url('../img/body_background_new.jpg');
 	background-position: left top;
 	background-origin: border-box;
 	-webkit-background-origin: border-box;
 
 	border-bottom: 1px solid #0e0e0e;
+}
+
+#head img {
+	margin: 10px 0 0 0;
 }
 
 #head img, #head h1{
@@ -37,28 +40,33 @@ body {
 
 #head h1 {
 	font-family: Limelight, Arial, sans-serif;
-	color: #cdedf9;
-	text-shadow: 0px -1px 1px #eeeeef;
+	font-weight: normal;
+	color: #2d2d2d;
+	text-shadow: -1px -1px 1px #eeeeef;
+	margin: 25px 20px 0 0;
 }
 
 #head img {
-	width: 90px;
+	width: 70px;
 }
 
 #neck {
 	width: 100%;
-	height: 155px;
-	background-color: #dbe7bc;
+	height: 209px;
+	background-color: #000;
 	background-position: left top;
-	background-image: url('../img/neck_background.jpg');
+	background-image: url('../img/neck_background_new.jpg');
 	background-repeat: repeat-x;
-	-moz-background-size: 467px 140px;
-	background-size: 467px 140px;
-
 }
 
 div.lcontainer {
 	float: left;
+}
+
+#sekk {
+	width: 110px;
+	border: 0;
+	margin: 20px 0 0 0;
 }
 
 .clear {
@@ -97,13 +105,14 @@ div.lcontainer {
 	margin: 0.5% 0 0 5%;
 }
 
+
 #body {
 	width: 100%;
-	background-image: url('../img/body_background.png');
-	background-repeat: repeat-x;
+	background-image: url('../img/body_background_new.jpg');
+	background-repeat: repeat;
 	background-position: left top;
 	background-color: #7e98a3;
-	overflow: hidden;
+	overflow: visible;
 }
 
 div {
@@ -111,7 +120,6 @@ div {
 	padding: 0;
 }
 
-
 .message p {
-    background-color: #ffff88;
+	background-color: #ffff88;
 }
