--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -46,7 +46,7 @@
 			<li class="bLeft"><a href="#">Sosialt</a></li>
 			<li id="ar"><a href="{% url event_list %}">Arrangementer</a></li>
 		</ul>
-
+        {% comment %}
         {% if user.is_authenticated %}
             <p>Logget inn: <a href="{% url accounts.views.edit_profile %}">{{ user.username }}</a> | <a href="/logout/">Logg ut</a></p>
         {% else %}
@@ -59,6 +59,7 @@
             </ul>
 		</form>
         {% endif %}
+        {% endcomment %}
 
 	</div>
 	</div>
@@ -331,9 +332,10 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 			ekstra informasjon som f.eks. "vi gratulerer" "quote of the day"
 			osv. -->
 			<div id="loginBox">
-				<form action="login.py" method="post">
-					<input type="text" placeholder="Username" nmae="uname" size="10" />
-					<input type="password" class="pwd" placeholder="Password" name="pwd" size="10" />
+				<form action="/login/" method="post">
+                    {% csrf_token %}
+					<input type="text" placeholder="Brukernavn" name="username" size="10" />
+					<input type="password" class="pwd" placeholder="Passord" name="password" size="10" />
 					<input class="box" type="checkbox" name="cookie" value="yes" />
 					<input class="submit" type="submit" value="" src="../img/login_button.png" />
 				</form>
