Fikset bug med <div id="body"> uten bakgrunn. Så må skal det være der.

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -375,7 +375,8 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 
 		</div>
 
-	</div>
+		<div class="clear"></div>
+		</div>
 	</div>
 
 </body>
