Små forandringer i noen templates

--- a/nablaweb/templates/content/content_list.html
+++ b/nablaweb/templates/content/content_list.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 {% for content in content_list %}
-<p>{{ content.headline }}</p>
+<h2>{{ content.headline }}</h2>
 <p><em>{{ content.lead_paragraph }}</em></p>
 <p><a href="{{ content.id }}"/>Les mer</a></p>
 <br />
