Endret CSS til menyen. Kommentert ut quotes/nablad/bursdager.

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -353,6 +353,8 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 			</ul>
 
 			<div id="sideCeller">
+                <div></div>
+                {% comment %}
 				<ul>
 					<li class="start">
 					<h2>Vi gratulerer</h2>
@@ -371,6 +373,7 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 					<h5>Ukens nablad!</h5>
 					</li>
 				</ul>
+                {% endcomment %}
 			</div>
 
 		</div>
