--- a/static/css/right_sidebar.css
+++ b/static/css/right_sidebar.css
@@ -31,10 +31,17 @@
 	height: 24px;
 }
 
-#body div.right ul.nav {
+#body div.right ul.nav { /* Andreas var her */
 	list-style-type: none;
 	margin: 30px 0 0 50px;
+    width:207px;
 	padding: 0;
+    background-color: #999999;
+    border: 1px solid #ddd;
+    border-radius:9px;
+    -moz-border-radius:9px;
+    -webkit-border-radius: 9px;
+    padding: 5px;
 }
 
 #body div.right ul.nav a {
@@ -63,8 +70,8 @@
     display: block;
 }
 
-#body div.right ul.nav li a:hover {
-    text-decoration: underline;
+#body div.right ul.nav li:hover { /* Andreas var her */
+    background-color: #888;
 }
 
 
