Småforandringer på templates
Også begynt på context_processors

--- a/nablaweb/templates/accounts/user_registration.html
+++ b/nablaweb/templates/accounts/user_registration.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 Her kan du registrere deg med ditt ntnubrukernavn.
-Hvis brukernavnet er et ekte ntnubrukernavn vil du motta en epost med passord.
+Hvis brukernavnet er godkjent vil du motta en epost med passord.
 
 <form method="POST" action="" >
   {% csrf_token %}
