--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -119,6 +119,11 @@
 			</table>
 		</div>
 
+		<!-- På infopanelet skal det stå en liste over hvilke arrangementer som hender når bruker holder over en dag i kalenderen. Det skal også komme opp informasjon der når serveren sender brukeren en melding. Hvis ingen av disse tilfellene intreffer skal det default stå reklame eller slide-show av forskjellige egne arrangementer. -->
+		<div id="infoPanel">
+			&nbsp;
+		</div>
+
 		<!-- Kalenderen med dager der current er merket med en vertikal strek
 		og dager det foregår arrangementer er merket med en eksatra runding på
 		rundingen med tallet for dagen. På siden skal det i utgangspunktet ikke
@@ -341,16 +346,18 @@ Morbi quis mattis sem. Vestibulum eget elit dolor, non venenatis risus. Nulla ri
 				</form>
 			</div>
 
-			<ul class="nav">
-                <li class="top"><a href="{% url homepage.views.start %}">Forsida</a></li>
-                <li><a href="{% url event_list %}">Arrangement</a></li>
-                <li><a href="{% url bedpres_list %}">Bedriftspresentasjoner</a></li>
-                <li><a href="{% url news_list %}">Nyheter</a></li>
-                <li><a href="{% url gallery.views.index %}">Galleriet</a></li>
-                <li><a href="{% url accounts.views.list %}">Brukerliste</a></li>
-                <li><a href="{% url accounts.views.user_register %}">Registrer deg</a></li>
-				<li class="bottom"><a href="/logout/">Logg ut</a></li>
-			</ul>
+			<div id="navWrapper">
+				<ul class="nav">
+					<li class="top"><a href="{% url homepage.views.start %}">Forsida</a></li>
+					<li><a href="{% url event_list %}">Arrangement</a></li>
+					<li><a href="{% url bedpres_list %}">Bedriftspresentasjoner</a></li>
+					<li><a href="{% url news_list %}">Nyheter</a></li>
+					<li><a href="{% url gallery.views.index %}">Galleriet</a></li>
+					<li><a href="{% url accounts.views.list %}">Brukerliste</a></li>
+					<li><a href="{% url accounts.views.user_register %}">Registrer deg</a></li>
+					<li class="bottom"><a href="/logout/">Logg ut</a></li>
+				</ul>
+			</div>
 
 			<div id="sideCeller">
                 <div></div>
