Fikset avatar-width bug i userBox-en.

--- a/static/css/right_sidebar.css
+++ b/static/css/right_sidebar.css
@@ -65,6 +65,7 @@
     #userBox #avatar {
         display: table-cell;
         vertical-align: top;
+        width: 80px;
     }
 
     #userBox #avatar img {
