Fikset right_sidebar.css

--- a/static/css/right_sidebar.css
+++ b/static/css/right_sidebar.css
@@ -88,10 +88,15 @@
 
 
 #body div.right ul.nav { /* Andreas var her */
-	/* Måtte slette litt for å få det til å funke -Nicolai */
 	list-style-type: none;
-	margin: 0;
-	padding: 0;
+	margin: 10px 0 0 50px;
+    width:207px;
+    background-color: #999999;
+    border: 1px solid #ddd;
+    border-radius:9px;
+    -moz-border-radius:9px;
+    -webkit-border-radius: 9px;
+    padding: 5px;
 }
 
 #body div.right ul.nav a {
@@ -102,10 +107,10 @@
 
 #body div.right ul.nav li {
 	background-image: url('../img/liste_punkt_midt.png');
-	background-position: 45px 0px;
 	background-repeat: no-repeat;
+	background-position: top left;
 	height: 19px;
-	padding: 0 0 4px 75px;
+	padding: 0 0 4px 25px;
 }
 
 #body div.right ul.nav li.top {
@@ -116,14 +121,17 @@
 	background-image: url('../img/liste_punkt_last.png');
 }
 
-/*
+#body div.right ul.nav li a {
+    display: block;
+}
+
 #body div.right ul.nav li:hover { /* Andreas var her */
     background-color: #888;
 }
-*/
 
 
-#body div.right ul.nav li:hover {
+#body div.right ul.nav li.hover {
+	background-image: none;
 	background-color: rgba(255, 255, 255, 0.8);
 	border-style: solid;
 	border-width: 1px;
@@ -131,10 +139,13 @@
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
+	position: relative;
+	left: -110px;
+	padding: 0 0 4px 135px;
 	z-index: 6;
 }
 
-#body div.right ul.nav li:hover a {
+#body div.right ul.nav li.hover a {
 	color: #454545;
 }
 
