Endret right_sidebar.css igjen.

--- a/static/css/right_sidebar.css
+++ b/static/css/right_sidebar.css
@@ -89,14 +89,8 @@
 
 #body div.right ul.nav { /* Andreas var her */
 	list-style-type: none;
-	margin: 10px 0 0 50px;
-    width:207px;
-    background-color: #999999;
-    border: 1px solid #ddd;
-    border-radius:9px;
-    -moz-border-radius:9px;
-    -webkit-border-radius: 9px;
-    padding: 5px;
+	margin: 0;
+	padding: 8px 0 8px 0;
 }
 
 #body div.right ul.nav a {
@@ -107,8 +101,8 @@
 
 #body div.right ul.nav li {
 	background-image: url('../img/liste_punkt_midt.png');
+	background-position: 45px 0px;
 	background-repeat: no-repeat;
-	background-position: top left;
 	height: 19px;
 	padding: 0 0 4px 25px;
 }
@@ -121,16 +115,7 @@
 	background-image: url('../img/liste_punkt_last.png');
 }
 
-#body div.right ul.nav li a {
-    display: block;
-}
-
-#body div.right ul.nav li:hover { /* Andreas var her */
-    background-color: #888;
-}
-
-
-#body div.right ul.nav li.hover {
+#body div.right ul.nav li:hover {
 	background-image: none;
 	background-color: rgba(255, 255, 255, 0.8);
 	border-style: solid;
@@ -139,13 +124,10 @@
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
-	position: relative;
-	left: -110px;
-	padding: 0 0 4px 135px;
 	z-index: 6;
 }
 
-#body div.right ul.nav li.hover a {
+#body div.right ul.nav li:hover a {
 	color: #454545;
 }
 
