--- a/static/css/arr_oversikt.css
+++ b/static/css/arr_oversikt.css
@@ -25,6 +25,9 @@
 }
 
 #nesteArrang table div.innh {
+	max-height: 35px;
+	max-width: 50px;
+	overflow: hidden;
 	padding: 0 0 0 5px;
 	margin: 0;
 }
