Mye tull med templates

--- a/nablaweb/templates/content/content_detail.html
+++ b/nablaweb/templates/content/content_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends ajax|yesno:"ajax.html,base.html" %}
 
 {% block title %}{{ block.super }} {{ content.headline }}{% endblock %}
 
