--- a/nablaweb/templates/events/event_detail.html
+++ b/nablaweb/templates/events/event_detail.html
@@ -1,5 +1,1 @@
-{% extends "base.html" %}
-
-{% block content %}
-{% include "events/event_detail_include.html" with event=object %}
-{% endblock %}
+{% extends "content/content_detail.html" %}
