--- a/nablaweb/templates/gallery/edit_album.html
+++ b/nablaweb/templates/gallery/edit_album.html
@@ -1,9 +1,9 @@
 <h3>Endre {{ album.title }}</h3>
-<form action="/gallery/album/{{ album.id }}/edit/" method="post">
+<form action="{% url gallery.views.edit_album album.id %}" method="post">
     {% csrf_token %}
     {{form.as_p}}
     <p>
         <input type="submit" value="Lagre" />
     </p>
 </form>
-<button onClick="parent.location='/gallery/album/{{ album.id }}'">Avbryt</button>
+<button onClick="parent.location='{% url gallery.views.album album.id %}'">Avbryt</button>
