--- a/nablaweb/templates/gallery/add_picture.html
+++ b/nablaweb/templates/gallery/add_picture.html
@@ -1,6 +1,6 @@
 <h3>Last opp et nytt bilde til {{ album.title }}</h3>
 
-<form action="/gallery/album/{{ album.id }}/add_pic/" method="post" enctype="multipart/form-data">
+<form action="{% url gallery.views.add_picture album.id %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <p><input type="submit" value="Send" /></p>
