--- a/nablaweb/templates/gallery/edit_picture.html
+++ b/nablaweb/templates/gallery/edit_picture.html
@@ -1,10 +1,10 @@
 <h3>Endre bilde {{ picture.album_picnr }} in {{ album.title }}</h3>
 
-<img src="/nabla_media/{{ picture.picture }}" width=800></img>
+<img src="{{ picture.getThumbnailUrl }}" width=180></img>
 
-<form action="/gallery/album/{{ album.id }}/picture/{{picture.album_picnr}}/edit/" method="post" enctype="multipart/form-data">
+<form action="{% url gallery.views.edit_picture album.id picture.album_picnr %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <p><input type="submit" value="Send" /></p>
 </form>
-<a href="/gallery/album/{{album.id}}/picture/{{picture.album_picnr}}">Avbryt</a>
+<a href="{% url gallery.views.picture_large album.id picture.album_picnr %}">Avbryt</a>
