--- a/nablaweb/templates/gallery/index.html
+++ b/nablaweb/templates/gallery/index.html
@@ -5,8 +5,8 @@
     <tr width="20%">
     {% for album in album_list %}
         <td>
-            <a href="album/{{ album.id }}">
-            <img src="/nabla_media/{% if album.picture_set.all.0.thumbnail %}{{ album.picture_set.all.0.thumbnail }}{% else %}graphics/gallery_thumb_empty.jpg{% endif %}"></img>
+            <a href="{% url gallery.views.album album.id %}">
+            <img src="{% if album.picture_set.all.0.thumbnail %}{{ album.picture_set.all.0.getThumbnailUrl }}{% else %}No Image{% endif %}"></img>
 	        </a></br>
             {{ album.title }}
         </td>
@@ -21,7 +21,7 @@
     <p>Det har ikke blitt lagt ut noen bilder enda</p>
 {% endif %}
 <p>
-    <a href="opprett">
+    <a href="{% url gallery.views.add_album %}">
         Lag nytt album
     </a>
 </p>
