--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -19,6 +19,7 @@
         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL}}css/right_sidebar.css" />
 	<link type="text/css" href="{{ STATIC_URL }}css/redmond/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />	
 	<link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/search.css" />
+	<link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/info.css" />
         {% endblock css %}
 
         {% block js %}
@@ -123,7 +124,26 @@
 
 		<!-- På infopanelet skal det stå en liste over hvilke arrangementer som hender når bruker holder over en dag i kalenderen. Det skal også komme opp informasjon der når serveren sender brukeren en melding. Hvis ingen av disse tilfellene intreffer skal det default stå reklame eller slide-show av forskjellige egne arrangementer. -->
 		<div id="infoPanel">
-			&nbsp;
+			<div>
+				{% block info%}
+					
+				{# MESSAGES { #}
+				{% comment %}
+				    Inneholder meldinger til brukeren, med forskjellige css-klasser, som f.eks.
+				    * error
+				    * warning
+				    * info
+				{% endcomment %}
+				{% if messages %}
+				      {% for message in messages %}
+				    <div class="message {{ message.tags }}"> 
+					<p>{{ message }}</p>
+				    </div>
+				      {% endfor %}
+				{% endif %}
+				{# END MESSAGES #}
+				{% endblock info %}
+			</div>
 		</div>
 
 		<!-- Kalenderen med dager der current er merket med en vertikal strek
@@ -291,21 +311,6 @@
 
 						<div class="innh">
 
-                        {# MESSAGES { #}
-                        {% comment %}
-                            Inneholder meldinger til brukeren, med forskjellige css-klasser, som f.eks.
-                            * error
-                            * warning
-                            * info
-                        {% endcomment %}
-                        {% if messages %}
-                              {% for message in messages %}
-                            <div class="message {{ message.tags }}"> 
-                                <p>{{ message }}</p>
-                            </div>
-                              {% endfor %}
-                        {% endif %}
-                        {# END MESSAGES #}
                             {% block content %}
 							<h2>Arrangementoverskrift</h2>
 							<div class="meta">
