--- a/nablaweb/templates/homepage/homepage_start.html
+++ b/nablaweb/templates/homepage/homepage_start.html
@@ -12,15 +12,15 @@
         {% with type=content|classname %}
 
         {% if type == "news" %}
-            {% include "news/news_preview.html" with news=content ajax="True" %}
+            {% include "news/news_detail.html" with news=content ajax="True" summary="True" %}
         {% endif %}
 
         {% if type == "event" %}
-            {% include "events/event_preview.html" with event=content ajax="True" %}
+            {% include "events/event_detail.html" with event=content ajax="True" summary="True" %}
         {% endif %}
 
         {% if type == "bedpres" %}
-            {% include "bedpres/bedpres_preview.html" with bedpres=content ajax="True" %}
+            {% include "bedpres/bedpres_detail.html" with bedpres=content ajax="True" summary="True" %}
         {% endif %}
 
         {% endwith %}
