--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -1,5 +1,5 @@
-{% extends "content/content_detail.html" %}
+{% extends "news/news_base.html" %}
 
-{% block include %}
-{% include "news/news_base.html" %}
+{% block content_type %}
+    Nyhet
 {% endblock %}
