--- a/nablaweb/templates/gallery/delete_picture.html
+++ b/nablaweb/templates/gallery/delete_picture.html
@@ -1,4 +1,9 @@
-<h3>Sletting av bilde</h3>
+{% extends "gallery/gallery_base.html" %}
+
+{% block title %}Galleri{% endblock %}
+
+{% block content %} 
+<h2>Sletting av bilde</h2>
 
 <img src="{{ picture.getThumbnailUrl }}" width = 200 border=1 />
 <p>Er du sikker på at du vil slette bildet?</p>
@@ -10,3 +15,4 @@
     </select>
     <p><input type="submit" value="Ok" /></p>
 </form>
+{% endblock %}
