--- a/nablaweb/templates/gallery/album.html
+++ b/nablaweb/templates/gallery/album.html
@@ -1,13 +1,18 @@
+{% extends "gallery/gallery_base.html" %}
+
+{% block title %}Galleri{% endblock %}
+
+{% block content %} 
 <p><a href="{% url gallery.views.index %}">Galleri</a> >> </p>
-<h1> {{ album.title }} </h1>
+<h2> {{ album.title }} </h2>
 <p>{{ album.description }}</p>
 
 {% if album.picture_set.all %}
     <table>
-    <tr width=20>
+    <tr>
     {% for picture in album.picture_set.all %}
         <td>
-            <a href="{% url gallery.views.picture_large album.id picture.album_picnr %}"><img src="{{ picture.getThumbnailUrl }}" width = 200 border=1 /></a>
+            <a href="{% url gallery.views.picture_large album.id picture.album_picnr %}"><img src="{{ picture.getThumbnailUrl }}" width = 150 border=2 /></a>
         </td>
         {% if forloop.counter|divisibleby:"3" %}
             </tr>
@@ -30,3 +35,4 @@
             Slett album
         </a>
     </p>
+{% endblock %}
