Mer fiksing med templates.
Om du bruker content-klassen, sjekk content_base.html og utvid blokker
derfra.

--- a/nablaweb/templates/bedpres/bedpres_detail.html
+++ b/nablaweb/templates/bedpres/bedpres_detail.html
@@ -1,5 +1,1 @@
-{% extends "events/event_detail.html" %}
-
-{% block include %}
-{% include "bedpres/bedpres_base.html" %}
-{% endblock %}
+{% extends "bedpres/bedpres_base.html" %}
