--- a/nablaweb/templates/events/event_detail.html
+++ b/nablaweb/templates/events/event_detail.html
@@ -1,10 +1,1 @@
-{% extends "content/content_detail.html" %}
-
-{% block content_type %}
-    Arrangement
-{% endblock %}
-
-{# Når og hvor #}
-{% block after_lead_paragraph %}
-    AFDHFJKHJK DIN MOR
-{% endblock %}
+{% extends "events/event_base.html" %}
