--- a/nablaweb/templates/events/event_base.html
+++ b/nablaweb/templates/events/event_base.html
@@ -1,32 +1,40 @@
 {% extends "content/content_base.html" %}
+{% load humanize %}
 
-{% block base_after_headline %}
+{% block content_type %}
+    Arrangement
+{% endblock %}
 
-{% if content.organizer %}
-Arrangør: {{ content.organizer }}<br />
-{% endif %}
+{% block readmore %}
+    <a href="{% url event_detail event.id %}">Les mer og meld deg på her</a>
+{% endblock %}
 
-Sted: {{ content.location }}<br />
+{% block after_lead_paragraph %}
 
-Start: {{ content.event_start }}<br />
+    {% if content.organizer %}
+        Arrangør: {{ content.organizer }}<br />
+    {% endif %}
 
-{% if content.event_end %}
-Slutt: {{ content.event_end }}<br />
-{% endif %}
+    Sted: {{ content.location }}<br />
+    Start: {{ content.event_start|naturalday }}<br />
 
-{% if content.registration_deadline %}
-Påmeldingsfrist: {{ content.registration_deadline }}<br />
-Tillat avmelding: {{ content.deregistration_deadline|yesno:"Ja,Nei"}}<br />
-{% endif %}
+    {% if content.event_end %}
+        Slutt: {{ content.event_end }}<br />
+    {% endif %}
 
-{% if content.registration_required %}
-{% if content.is_full %}
-Fullt (ventelisteknapp her?)
-{% else %}
-Ledige plasser: {{ content.free_places }}
-{% endif %}
-{% else %}
-Ingen påmelding påkrevd.
-{% endif %}<br />
+    {% if content.registration_deadline %}
+        Påmeldingsfrist: {{ content.registration_deadline }}<br />
+        Tillat avmelding: {{ content.deregistration_deadline|yesno:"Ja,Nei"}}<br />
+    {% endif %}
+
+    {% if content.registration_required %}
+        {% if content.is_full %}
+            Fullt (ventelisteknapp her?)
+        {% else %}
+            Ledige plasser: {{ content.free_places }}
+        {% endif %}
+    {% else %}
+        Ingen påmelding påkrevd.
+    {% endif %}<br />
 
 {% endblock %}
