--- a/nablaweb/templates/news/news_base.html
+++ b/nablaweb/templates/news/news_base.html
@@ -1,1 +1,9 @@
 {% extends "content/content_base.html" %}
+
+{% block readmore %}
+    <a href="{% url news_detail news.id %}">Les mer</a>
+{% endblock %}
+
+{% block content_type %}
+    Nyhet
+{% endblock %}
