Fikset arrangement seperator bug i hovedmenyen

--- a/nablaweb/templates/base.html
+++ b/nablaweb/templates/base.html
@@ -47,7 +47,7 @@
 			<li><a href="#">Om Nabla</a></li>
 			<li class="bLeft"><a href="#">Bedrifter</a></li>
 			<li class="bLeft"><a href="#">Sosialt</a></li>
-			<li id="ar"><a href="{% url event_list %}">Arrangementer</a></li>
+			<li id="ar" class="bLeft"><a href="{% url event_list %}">Arrangementer</a></li>
 		</ul>
         {% comment %}
         {% if user.is_authenticated %}
