--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% for content in content_list %}
-<p>{{ content.headline }}</p>
+<p><strong>{{ content.headline }}</strong></p>
 <p><em>{{ content.lead_paragraph }}</em></p>
 <p><a href="{{ content.id }}"/>Les mer</a></p>
 <br />
