Lagt inn farger på arrangementene

--- a/static/css/arr_oversikt.css
+++ b/static/css/arr_oversikt.css
@@ -50,6 +50,7 @@
 
 #nesteArrang table div.innh h4 {
 	font-size: 0.9em;
+	color: #cdceff;
 }
 
 #nesteArrang table div.innh a {
@@ -64,5 +65,6 @@
 
 #nesteArrang table div.innh p {
 	font-size: 0.8em;
+	color: #232323;
 }
 
