--- a/nablaweb/templates/accounts/edit_profile.html
+++ b/nablaweb/templates/accounts/edit_profile.html
@@ -8,8 +8,10 @@
 
 
 <form action="" method="post">{% csrf_token %}
-{{ userForm.as_p }}
-{{ profileForm.as_p }}
+<table>
+{{ userForm.as_table }}
+{{ profileForm.as_table }}
+</table>
 <input type="submit" value="Send inn" />
 </form>
 
